--- a/src/MTS.ui
+++ b/src/MTS.ui
@@ -87,6 +87,9 @@
        <property name="readOnly">
         <bool>true</bool>
        </property>
+       <property name="placeholderText">
+        <string/>
+       </property>
       </widget>
       <widget class="QRadioButton" name="cube_checkbox">
        <property name="geometry">
@@ -348,7 +351,7 @@
         </size>
        </property>
        <property name="text">
-        <string>Export to Excel and Plot</string>
+        <string>匯出 Excel 與 Plots</string>
        </property>
       </widget>
       <widget class="QRadioButton" name="custom_area_checkbox">
@@ -383,384 +386,15 @@
         <string/>
        </property>
        <property name="placeholderText">
-        <string>Enter Custom Area</string>
+        <string>自訂面積 [cm^2]</string>
        </property>
       </widget>
      </widget>
      <widget class="QWidget" name="tab_2">
       <attribute name="title">
-       <string>預覽數據</string>
+       <string>匯入檔案來繪圖</string>
       </attribute>
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_4">
-         <property name="minimumSize">
-          <size>
-           <width>131</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>131</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>個別抗壓強度 (kgf/cm2):</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QLabel" name="label_6">
-         <property name="minimumSize">
-          <size>
-           <width>131</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>131</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>抗壓強度 figure</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="3">
-        <widget class="QLabel" name="label_10">
-         <property name="minimumSize">
-          <size>
-           <width>200</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>131</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>篩選後的個別抗壓強度 (kgf/cm2):</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0" rowspan="4">
-        <widget class="QTableView" name="compTableView">
-         <property name="minimumSize">
-          <size>
-           <width>400</width>
-           <height>400</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>400</width>
-           <height>400</height>
-          </size>
-         </property>
-         <property name="editTriggers">
-          <set>QAbstractItemView::NoEditTriggers</set>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1" rowspan="4">
-        <widget class="QGraphicsView" name="graphicsView_4">
-         <property name="minimumSize">
-          <size>
-           <width>500</width>
-           <height>400</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>500</width>
-           <height>400</height>
-          </size>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="2">
-        <widget class="QLabel" name="label_8">
-         <property name="minimumSize">
-          <size>
-           <width>101</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>101</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>抗壓強度篩選值</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="3" rowspan="4">
-        <widget class="QTableView" name="compTableView_2">
-         <property name="minimumSize">
-          <size>
-           <width>400</width>
-           <height>400</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>400</width>
-           <height>400</height>
-          </size>
-         </property>
-         <property name="editTriggers">
-          <set>QAbstractItemView::NoEditTriggers</set>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="2">
-        <widget class="QLabel" name="compLabel">
-         <property name="minimumSize">
-          <size>
-           <width>47</width>
-           <height>12</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>47</width>
-           <height>12</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>20%</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="2">
-        <widget class="QSlider" name="compVerticalSlider">
-         <property name="minimumSize">
-          <size>
-           <width>22</width>
-           <height>200</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>22</width>
-           <height>200</height>
-          </size>
-         </property>
-         <property name="maximum">
-          <number>100</number>
-         </property>
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="2">
-        <widget class="QPushButton" name="ReCompPlotBtn">
-         <property name="text">
-          <string>plot 抗壓強度圖</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="0">
-        <widget class="QLabel" name="label_5">
-         <property name="minimumSize">
-          <size>
-           <width>131</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>131</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>個別楊氏係數 (kgf/cm2):</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="1">
-        <widget class="QLabel" name="label_7">
-         <property name="minimumSize">
-          <size>
-           <width>131</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>131</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>楊氏係數 figure</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="3">
-        <widget class="QLabel" name="label_11">
-         <property name="minimumSize">
-          <size>
-           <width>200</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>131</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>篩選後的個別楊氏係數 (kgf/cm2):</string>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="0" rowspan="4">
-        <widget class="QTableView" name="EMTableView">
-         <property name="minimumSize">
-          <size>
-           <width>400</width>
-           <height>400</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>400</width>
-           <height>400</height>
-          </size>
-         </property>
-         <property name="editTriggers">
-          <set>QAbstractItemView::NoEditTriggers</set>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="1" rowspan="4">
-        <widget class="QGraphicsView" name="graphicsView_5">
-         <property name="minimumSize">
-          <size>
-           <width>500</width>
-           <height>400</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>500</width>
-           <height>400</height>
-          </size>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="2">
-        <widget class="QLabel" name="label_9">
-         <property name="minimumSize">
-          <size>
-           <width>101</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>101</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>楊氏係數篩選值</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="3" rowspan="4">
-        <widget class="QTableView" name="EMTableView_2">
-         <property name="minimumSize">
-          <size>
-           <width>400</width>
-           <height>400</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>400</width>
-           <height>400</height>
-          </size>
-         </property>
-         <property name="editTriggers">
-          <set>QAbstractItemView::NoEditTriggers</set>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="2">
-        <widget class="QLabel" name="EMLabel">
-         <property name="minimumSize">
-          <size>
-           <width>47</width>
-           <height>12</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>47</width>
-           <height>12</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>20%</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="8" column="2">
-        <widget class="QSlider" name="EMVerticalSlider">
-         <property name="minimumSize">
-          <size>
-           <width>22</width>
-           <height>200</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>22</width>
-           <height>200</height>
-          </size>
-         </property>
-         <property name="maximum">
-          <number>100</number>
-         </property>
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="9" column="2">
-        <widget class="QPushButton" name="ReEMPlotBtn">
-         <property name="text">
-          <string>plot 楊氏係數圖</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
+      <layout class="QGridLayout" name="gridLayout"/>
      </widget>
     </widget>
    </item>
